Version 1.0.1:
- Update README.dos
- Don't check configuration file permissions on Cygwin.

Version 1.0.0:
- Gnulib update. Added gettimeofday module.
  Note that a locally modified copy of gnulib was used. It contains patches for
  the getpass, nanosleep, and gettimeofday modules, plus the additional module 
  sys_select. All of these changes were submitted to the bug-gnulib@gnu.org
  mailing list, but they are not integrated yet.
- Removed some W32 specific defines from delivery.c because they are not 
  necessary with current MinGW versions.
- Removed ftruncate-for-W32 hack in uidls.c, because newer MinGW versions have
  ftruncate().
- Renamed README.win32 to README.w32. Updated README.w32 and README.dos.
- Replace '#ifdef _WIN32' with '#ifdef W32_NATIVE', where W32_NATIVE is defined
  in config.h if the following is true:
  '#if (defined _WIN32 || defined __WIN32__) && !defined __CYGWIN__'.
  The reason is that Cygwin defines _WIN32 nowadays, but we want the UNIX API
  on that platform.
- Include config.h in list.c.
- Fix warnings emitted for configure.ac by autoreconf.
- Added -a, --all-accounts option to query all accounts in the configuration
  file (suggested by Jimmy Lolla). Changed short option for --auth-only from 
  -a to -A.
- Fixed handling of weird UIDs:
  1. When checking for control characters, use c_iscntrl() instead of iscntrl(),
     to be independent of the user's locale.
  2. Use POP3_EUNAVAIL as the error code for "Server does not support the UIDL 
     command". All other error codes are critical.
  Bug reported by Marcelo. Thanks!
- Lock the UIDLS file once and keep the lock as long as the UIDLS data is used.
  This prevents loss of UIDs (and therefore multiple deliveries of the 
  corresponding mails) when multiple mpop processes use the same UIDLS file.
- lock_file(): If another process holds a lock on the file, then wait 1/10 
  second instead of 1 second before the next try.
- Gnulib update. Added nanosleep module.