@@ -1,5 +1,8 @@
 Version 1.0.1:
-- Update README.dos
+- Enable network connection timeouts on DJGPP/Watt32. Thanks to Gisle Vanem for
+  pointing out that this works just like it does with UNIX. The DJGPP/Watt32
+  port is now on par with the UNIX port.
+- Update README.dos.
 - Don't check configuration file permissions on Cygwin.
 
 Version 1.0.0:
